:bug: fix(profile): thant htet aung profile

--- a/content/profile/thanthtetaung.mdx
+++ b/content/profile/thanthtetaung.mdx
@@ -11,7 +11,11 @@ tags:
   - Vue
   - Bun
 ---
-<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-import App from '@/components/Contributors/Thant/App.jsx';
+{/* <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> */}
 
-<App />
+{/* <App /> */}
+
+```js
+please re-check your code
+and before re-uploading, npm run build first.
+```
