feat: update aungmyatmoe name

--- a/content/profile/aungmyatmoe.mdx
+++ b/content/profile/aungmyatmoe.mdx
@@ -13,17 +13,6 @@ tags:
   - BASH
 ---
 
-<div className="min-h-[250vh]">
-    <ul className="titles transparent">
-        <li>Google</li>
-        <li>Aung</li>
-        <li>Myat</li>
-        <li>Moe</li>
-    </ul>
-    <ul className="titles fill">
-        <li>Google</li>
-        <li>Aung</li>
-        <li>Myat</li>
-        <li>Moe</li>
-    </ul>
-</div>
+
+Google my name "Aung Myat Moe".
+More info https://aungmyatmoe.me
